--- a/my-app/src/app/app.component.html
+++ b/my-app/src/app/app.component.html
@@ -1,1 +1,6 @@
 <app-nav></app-nav>
+<app-gallery></app-gallery>
+<app-service></app-service>
+<app-offer></app-offer>
+<app-reviews></app-reviews>
+<app-footer></app-footer>
