--- a/my-app/src/app/layouts/nav/nav.component.css
+++ b/my-app/src/app/layouts/nav/nav.component.css
@@ -1,22 +1,33 @@
 .navigation {
-  padding: 20px 40px;
+  padding: 15px 35px;
   display:flex;
   justify-content: space-between;
+  font-size:13px;
+  border-bottom:0.5px solid #cecccc;
 }
 
 .nav-first{
   display:flex;
   justify-content: space-between;
   width: 50%;
-  color: #494848
 }
+
+.nav-first span a{
+  color: #555555 !important;
+}
+
+.nav-first span a:hover{
+  color: #c0a319!important;
+}
+
 
 .nav-second{
   display:flex;
+  color:#555555;
 }
 
 .search-nav{
-  padding: 30px 40px;
+  padding: 0px 20px;
   display:flex;
   justify-content: space-between;
   align-items: center;
@@ -24,11 +35,13 @@
 
 .tel-number{
   font-weight:bold;
-  color: #1a1a1a
+  color: #1a1a1a;
+  font-size:16px;
 }
 
 .title{
-  font-size:40px;
+  font-size:34px;
+  color:#222222;
 }
 
 .search{
@@ -38,7 +51,12 @@
 .category-nav{
   display:flex;
   color: #1a1a1a;
-  font-size:20px;
+  font-size:18px;
   justify-content: space-around;
   padding:20px;
+  font-family: 'Noto Sans', sans-serif;
+}
+
+.cover-image img{
+  width:100%;
 }
