--- a/my-app/src/app/layouts/nav/nav.component.html
+++ b/my-app/src/app/layouts/nav/nav.component.html
@@ -1,22 +1,21 @@
 <div class="navigation">
   <div class="nav-first">
-    <span>About Us</span>
-    <span>Loyality Program</span>
-    <span>Cooperation</span>
-    <span>Delivery</span>
-    <span>Payment</span>
-    <span>Contact</span>
+    <span><a href="">About Us</a></span>
+    <span><a href="">Loyality Program</a></span>
+    <span><a href="">Cooperation</a></span>
+    <span><a href="">Delivery</a></span>
+    <span><a href="">Payment</a></span>
+    <span><a href="">Contact</a></span>
   </div>
   <div class="nav-second">
-    <i class="fas-sharp fas-solid fas-user"></i>
-    <span>Login</span>
+    <span><i style="font-weight:bold" class="fa-regular fa-user"></i></span>
   </div>
 </div>
 
 <div class="search-nav">
-  <div class="tel-number"><span><i class="fa-solid fa-phone"></i>8(800) 555 51 24</span></div>
-  <div class ="title">BRITVOLOGY</div>
-  <div class="search"><i class="fa-solid fa-phone"></i>search</div>
+  <div class="tel-number"><span><i class="fa-solid fa-phone"></i> 8(800) 555 51 24</span></div>
+  <div class ="title"><img src="./assets/logo.png" alt=""></div>
+  <div class="search"><i class="fa-solid fa-magnifying-glass"></i> search</div>
 </div>
 
 <div class="category-nav">
@@ -26,4 +25,8 @@
   <span>Cosmetics</span>
   <span>Care for hair</span>
   <span>Care for face</span>
+</div>
+
+<div class="cover-image">
+  <img src='./assets/image.png'>
 </div>
