--- a/my-app/src/styles.css
+++ b/my-app/src/styles.css
@@ -1,4 +1,21 @@
 *{
   padding:0;
   margin:0;
+  font-family: 'Noto Sans', sans-serif;
+}
+
+a:link {
+  text-decoration: none;
+}
+
+a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a:active {
+  text-decoration: none;
 }
