--- a/my-project/src/app/app.component.html
+++ b/my-project/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-header></app-header>
-<app-content></app-content>
-<app-footer></app-footer>
+<!--<app-header></app-header>-->
+<!--<app-content></app-content>-->
+<!--<app-footer></app-footer>-->
+<app-timer></app-timer>
