--- a/my-app/src/app/layouts/gallery/gallery.component.css
+++ b/my-app/src/app/layouts/gallery/gallery.component.css
@@ -15,8 +15,13 @@
   margin: 20px 0;
 }
 
+/*.gallery-item:hover{*/
+/*  transform: scale(1.2);*/
+/*}*/
+
 .gallery-item:hover{
-  transform: scale(1.2);
+  background-size: 150%;
+  background-position:center;
 }
 
 .gallery-item-content{
