--- a/homework-ngModel/src/app/app.component.html
+++ b/homework-ngModel/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="col-6">
   <div class="form-group col-6">
     <label for="exampleInputEmail1"></label>
-    <input (appCustomNgModel)="changeValue($event)" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+    <input appCustomNgModel (data)="changeValue($event)" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
            placeholder="Input">
   </div>
 
