--- a/auth/src/app/components/register/register.component.html
+++ b/auth/src/app/components/register/register.component.html
@@ -2,49 +2,48 @@
   <div *ngSwitchCase="false">
     <app-main-layout>
       <div class="login100-form validate-form p-l-55 p-r-55 p-t-178">
+        <form [formGroup]="profileForm" >
           <span class="login100-form-title">
            {{languagesService.language.SIGN_UP}}
           </span>
         <div class="wrap-input100 validate-input" data-validate="Please enter username">
-          <input class="input100" type="text" name="username" [(ngModel)]="username"
-                 placeholder="{{languagesService.language.USER_NAME}}">
+          <input class="input100"   type="text" name="username"
+                 formControlName="username"   placeholder="{{languagesService.language.USER_NAME}}">
           <span class="focus-input100"></span>
         </div>
-        <div *ngFor="let item of userService.getErrors()">
-      <span class="error-message" *ngIf="item.field === 'username'">
-        {{item.error}}
+
+      <span class="error-message" *ngIf="!getControllState('username') && this.profileForm.get('username')?.touched">
+        Username Can not be empty.
       </span>
-        </div>
+
         <div class="m-b-16"></div>
         <div class="wrap-input100 validate-input" data-validate="Please enter password">
-          <input class="input100" type="password" name="pass" [(ngModel)]="password"
+          <input class="input100" type="password" name="pass"   formControlName="password"
                  placeholder="{{languagesService.language.PASSWORD}}">
           <span class="focus-input100"></span>
         </div>
 
-        <div *ngFor="let item of userService.getErrors()">
-      <span class="error-message" *ngIf="item.field === 'password'">
-        {{item.error}}
-      </span>
-        </div>
+          <span class="error-message" *ngIf="!getControllState('password') && this.profileForm.get('password')?.touched">
+        Password Can not be empty.
+         </span>
+
         <div class="m-b-16"></div>
         <div class="wrap-input100 validate-input" data-validate="Please enter password">
-          <input class="input100" type="password" name="confirmpass" [(ngModel)]="confirm_password"
+          <input class="input100" type="password" name="confirmpass"  formControlName="confirm_password"
                  placeholder="{{languagesService.language.CONFIRM_PASSWORD}}">
           <span class="focus-input100"></span>
         </div>
-        <div *ngFor="let item of userService.getErrors()">
-      <span class="error-message" *ngIf="item.field === 'confirm_password'">
-        {{item.error}}
-      </span>
-        </div>
+          <span class="error-message" *ngIf="!getControllState('confirm_password') && this.profileForm.get('confirm_password')?.touched">
+        Confirm Password Can not be empty.
+          </span>
         <div class="text-right p-t-13 p-b-23">
         </div>
         <div class="container-login100-form-btn">
-          <button class="login100-form-btn" (click)="saveRegistrationData()">
+          <button class="login100-form-btn" type="button" (click)="saveRegistrationData()">
             {{languagesService.language.SIGN_UP}}
           </button>
         </div>
+        </form>
         <div class="flex-col-c p-t-170 p-b-40">
         <span class="txt1 p-b-9">
          {{languagesService.language.DONT_HAVE_ACCOUNT}}
